# hydration-node

./: .autorc  .codecov.yml  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.binary  Dockerfile.with-builder  LICENSE  Makefile  README.html  README.md  bh.all  clean.sh  concatenate.py  dappnode_package.json  diagnose.ts  diff.txt  docker-compose.yml  gigahdx.spec  ice.wasm  notes  notesss  operational_dispatch_files.txt  package-lock.json  package.json  releases.json  route-executor.rs  route_executor.rs  rust-toolchain  rustfmt.toml  stack.yml  weights-pallet.rs
hydration-solver/: Cargo.toml
hydration-solver/src/: data.rs  lib.rs  omni.rs  problem.rs  problem_v4.rs  traits.rs  types.rs  v3.rs  v4.rs
hydration-solver/src/tests/: mod.rs  solve.rs  v3.rs  v4.rs
hydration-solver/testdata/: many_intents_1732653569.json  many_intents_1732653756.json  success_1732718828.json  success_1732718901.json  success_1732719091.json  success_1732719163.json  success_1732719215.json  success_1732737492.json
ice/ice-solver/: Cargo.toml  SOLVER.md  SOLVERS.md
ice/ice-solver/src/: lib.rs  replay_format.rs
ice/route-findr/: Cargo.toml  SPEC.md
ice/route-findr/src/: bfs.rs  graph.rs  lib.rs  strategy.rs  testdata.rs  types.rs
ice/solver-bench/: Cargo.toml  FUZZING.md
ice/solver-bench/baselines/: v1.txt
ice/solver-bench/benches/: solver.rs
ice/solver-bench/src/: lib.rs
integration-tests/: Cargo.toml  README.md  package-lock.json  package.json
integration-tests/evm-snapshot/: SNAPSHOT  router
integration-tests/network/: operational_test.toml
integration-tests/omnipool-liquidity-mining/: mod.rs
integration-tests/parachain-runtime-mock/: Cargo.toml
integration-tests/parachain-runtime-mock/src/: lib.rs
integration-tests/proptest-regressions/: dust.txt
integration-tests/snapshots/hsm/: SNAPSHOT
integration-tests/src/: aave_router.rs  aave_simulator.rs  account_nonce.rs  admin_misc_extra.rs  amm_misc_extra.rs  asset_registry.rs  balances_tokens_hooks.rs  bonds.rs  call_filter.rs  circuit_breaker.rs  configuration.rs  contracts.rs  cross_chain_transfer.rs  currency_id_convert.rs  dca.rs  dca_ice.rs  deposit_limiter.rs  dispatcher.rs  dust.rs  dust_removal_whitelist.rs  duster.rs  dynamic_evm_fee.rs  dynamic_fees.rs  erc20.rs  evm.rs  evm_permit.rs  exchange_asset.rs  fee_calculation.rs  fee_processor.rs  gigahdx.rs  gigahdx_liquidation.rs  gigahdx_rewards.rs  gigahdx_vote_scenarios.rs  gigahdx_vote_scenarios_extra.rs  gigahdx_voting.rs  global_account_derivation.rs  global_circuit_breaker.rs  global_withdraw_limit.rs  hsm.rs  hsm_admin_extra.rs  (+49 more)
integration-tests/src/driver/: example.rs  mod.rs
integration-tests/src/ice/: cvx.rs  dca.rs  forward.rs  generator.rs  intents.rs  mod.rs  netting.rs  node_solver.rs  omni.rs  recorder.rs  (+4 more)
integration-tests/tests/: README.md  operational_class_test.zndsl
integration-tests/uniswap-snapshot/: README.md
liquidation-worker-support/: Cargo.toml
liquidation-worker-support/src/: lib.rs
math/: Cargo.toml  README.md
math/benches/: benchmarks.rs
math/proptest-regressions/: rational.txt
math/src/: fee.rs  fraction.rs  lib.rs  ratio.rs  test_pow_accuracy.rs  test_utils.rs  transcendental.rs  types.rs
node/: Cargo.toml  build.rs
node/hydra_dx/: Cargo.toml
node/parachain/: Cargo.toml
node/res/: devnet.json  hydradx.json  moonbase.json  rococo.json
node/src/: cfg new partial.rs  cfg start node impl.rs  chain_spec.rs  cli.rs  client.rs  command.rs  evm.rs  ice.rs  ice_ext.rs  ice_solver_worker.rs  lib.rs  liquidation_worker.rs  main.rs  rpc.rs  service.rs  synthetic_eth_filter.rs  synthetic_logs_override.rs  synthetic_mapping_sync.rs  testing_chain_spec.rs  tx_priority.json
node/standalone/: Cargo.toml
node/testing_node/: Cargo.toml
pallets/adder-felipe/: Cargo.toml
pallets/amm/: Cargo.toml  README.md
pallets/amm-support/: Cargo.toml  README.md
pallets/asset-registry/: Cargo.toml  README.md
pallets/balances/: Cargo.toml
pallets/bonds/: Cargo.toml  README.md
pallets/btc-vault/: Cargo.toml
pallets/build-btc-tx/: Cargo.toml
pallets/build-evm-tx/: Cargo.toml  README.md
pallets/circuit-breaker/: Cargo.toml  README.md
pallets/claims/: Cargo.toml  README.md
pallets/collator-rewards/: Cargo.toml
pepl-worker/: Cargo.toml  PEPL-improvements.md  README.md  pepl-testing.md
pepl-worker/src/: config.rs  lib.rs  oracle.rs  tests.rs  traits.rs  worker.rs
pepl-worker/support/: Cargo.toml
pepl-worker/test-scenarios/: check-oracle-signer.js  dot-crash.json  override-oracle-signer.js  package-lock.json  package.json  update-oracle.js
primitives/: Cargo.toml
primitives/src/: asset.rs  constants.rs  currency.rs  lib.rs  runtime_api.rs  traits.rs
runtime/: Cargo.toml
runtime-fuzzer/: .dockerignore  Cargo.toml  Dockerfile  README.md  justfile  memory_map.output  run_crashes.sh
runtime-fuzzer/data/: MOCK_SNAPSHOT  omnipool.toml  registry.toml  stableswap.toml
runtime-fuzzer/hydradump/: pyproject.toml
runtime-fuzzer/omniparser/: Cargo.toml
runtime-fuzzer/src/: accounts.rs  main.rs  omnipool.rs  registry.rs  stableswap.rs  staking.rs
runtime-mock/: Cargo.toml
runtime-mock/data/: registry.toml
runtime-mock/src/: accounts.rs  lib.rs  main.rs  omnipool.rs  registry.rs  stableswap.rs  staking.rs  tests.rs  traits.rs
runtime/aave-simulator/: Cargo.toml
runtime/adapters/: Cargo.toml
runtime/common/: Cargo.toml
runtime/fuzzer/: rust-toolchain
runtime/hydra-dx/: Cargo.toml
runtime/hydradx/: Cargo.toml  build.rs
runtime/src/: constants.rs  currency.rs  impls.rs  lib.rs  parachain.rs  standalone.rs  tests.rs  xcm_support.rs
runtime/testing-hydra-dx/: Cargo.toml
runtime/testing-hydradx/: Cargo.toml
scraper/: Cargo.toml  README.md
scraper/src/: lib.rs  main.rs
traits/: Cargo.toml
traits/src/: amm.rs  circuit_breaker.rs  evm.rs  fee.rs  fee_processor.rs  gigahdx.rs  ice.rs  lazy_executor.rs  lib.rs  liquidity_mining.rs  nft.rs  offchain.rs  oracle.rs  pools.rs  price.rs  registry.rs  router.rs  stableswap.rs
(+2027 files in other folders)
